--- a/Helper/Windows/GitCredentialsWindow.xaml
+++ b/Helper/Windows/GitCredentialsWindow.xaml
@@ -1,10 +1,15 @@
 ﻿<Window x:Class="Helper.Windows.GitCredentialsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Height="150" Width="300"
+        Height="150" Width="400"
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterOwner" >
     <Window.Resources>
         <Style TargetType="TextBlock" BasedOn="{StaticResource DefaultText}"/>
+        <Style TargetType="TextBox" BasedOn="{StaticResource DefaultTextBox}"/>
+        <Style TargetType="PasswordBox">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="MinWidth" Value="50"/>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
