--- a/Helper/MainWindow.xaml
+++ b/Helper/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:userControls="clr-namespace:Helper.UserControls"
-        Title="Helper" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Helper" Height="450" Width="800" WindowStartupLocation="CenterScreen"
+        Background="#202020">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,9 +23,12 @@
             </MenuItem>
         </Menu>
 
-        <TabControl Grid.Row="1">
+        <TabControl Grid.Row="1" Background="#202020">
             <TabItem Header="Checkers">
                 <userControls:CheckersControl x:Name="_checkers"/>
+            </TabItem>
+            <TabItem Header="Events">
+                <userControls:EventsControl x:Name="_events"/>
             </TabItem>
             <TabItem Header="Jobs">
                 <userControls:JobsControl x:Name="_jobs"/>
