--- a/Helper/UserControls/JobsControl.xaml
+++ b/Helper/UserControls/JobsControl.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
-        <ListBox x:Name="_lb" SelectionMode="Extended">
+        <ListBox x:Name="_lb" SelectionMode="Extended" Background="#202020">
 
         </ListBox>
     </Grid>
