--- a/Helper/App.xaml
+++ b/Helper/App.xaml
@@ -21,6 +21,11 @@
                 <Setter Property="MinWidth" Value="50"/>
             </Style>
 
+            <Style x:Key="DefaultPasswordBox" TargetType="PasswordBox">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="MinWidth" Value="50"/>
+            </Style>
+
             <Style x:Key="DefaultCheckBox" TargetType="CheckBox">
                 <Setter Property="Margin" Value="5"/>
             </Style>
