--- a/Helper/MainWindow.xaml
+++ b/Helper/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:userControls="clr-namespace:Helper.UserControls"
-        Title="Helper" Height="450" Width="800" WindowStartupLocation="CenterScreen"
+        Title="Helper" Height="450" Width="800"
         Background="#202020">
     <Grid>
         <Grid.RowDefinitions>
