--- a/Helper/UserControls/JobControl.xaml
+++ b/Helper/UserControls/JobControl.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="Helper.UserControls.JobControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="2"/>
@@ -9,6 +10,7 @@
             <Setter Property="Margin" Value="2"/>
         </Style>
     </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -17,7 +19,7 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock x:Name="_tbName" MinWidth="200"/>
-            <Button Content="Run now" Click="OnRunClick" />
+            <Button Content="Run now" Click="OnRunClick" Visibility="Collapsed"/>
             <Button Content="History..." Click="OnHistoryClick"/>
         </StackPanel>
 
