--- a/Helper/UserControls/JobsControl.xaml
+++ b/Helper/UserControls/JobsControl.xaml
@@ -3,7 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <ListBox x:Name="_lb" SelectionMode="Extended" Background="#202020">
-
+            <ListBox.ContextMenu>
+                <ContextMenu Opened="ContextMenu_OnOpened">
+                    <MenuItem Header="Run now" x:Name="_miRunNow" Click="_miRunNow_OnClick"/>
+                    <MenuItem Header="Remove" x:Name="_miRemove" Click="_miRemove_OnClick"/>
+                </ContextMenu>
+            </ListBox.ContextMenu>
         </ListBox>
     </Grid>
 </UserControl>
